--- a/web/templates/partials/navbar.html
+++ b/web/templates/partials/navbar.html
@@ -1,3 +1,4 @@
+{% set endpoint = request.endpoint or '' %}
 <nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
   <div class="container">
     <a class="navbar-brand fw-bold" href="{{ url_for('index') }}">MaBoutique</a>
@@ -32,23 +33,23 @@
         {% if current_user.is_authenticated %}
           {% if current_user.is_admin %}
             <li class="nav-item">
-              <a class="nav-link {% if request.endpoint.startswith('admin.') %}active{% endif %}"
+              <a class="nav-link {% if endpoint.startswith('admin.') %}active{% endif %}"
                  href="{{ url_for('admin.dashboard') }}">Admin</a>
             </li>
           {% endif %}
           <li class="nav-item">
-            <a class="nav-link {% if request.endpoint.startswith('user.') %}active{% endif %}"
+            <a class="nav-link {% if endpoint.startswith('user.') %}active{% endif %}"
                href="{{ url_for('user.account') }}">{{ current_user.email }}</a>
           </li>
         {% endif %}
       
         <li class="nav-item">
-          <a class="nav-link {% if request.endpoint.startswith('orders.') %}active{% endif %}"
+          <a class="nav-link {% if endpoint.startswith('orders.') %}active{% endif %}"
              href="{{ url_for('orders.list_orders') }}">Mes commandes</a>
         </li>
       
         <li class="nav-item">
-          <a class="nav-link {% if request.endpoint.startswith('cart.') %}active{% endif %}"
+          <a class="nav-link {% if endpoint.startswith('cart.') %}active{% endif %}"
              href="{{ url_for('cart.view') }}">
             Panier <span class="badge bg-primary" id="cart-count">{{ cart_count or 0 }}</span>
           </a>
@@ -56,11 +57,11 @@
       
         {% if not current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link {% if request.endpoint == 'auth.login' %}active{% endif %}"
+            <a class="nav-link {% if endpoint == 'auth.login' %}active{% endif %}"
                href="{{ url_for('auth.login') }}">Se connecter</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if request.endpoint == 'auth.register' %}active{% endif %}"
+            <a class="nav-link {% if endpoint == 'auth.register' %}active{% endif %}"
                href="{{ url_for('auth.register') }}">S'inscrire</a>
           </li>
         {% endif %}
