--- a/web/templates/static/css/style.css
+++ b/web/templates/static/css/style.css
@@ -48,6 +48,9 @@ body {
   object-fit: cover;
   border-bottom: 1px solid #eee;
 }
+.product-card {
+  cursor: pointer;
+}
 .product-card .card-body {
   position: relative;
 }
